# Benchmarking-DuckDB-Polars-Pandas-

./: README.md  hello.py  main.py  pyproject.toml
