[project]
name = "benchmarking-duckdb-polars-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.0",
    "marimo>=0.20.4",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "sqlglot>=29.0.1",
]
